src/exam/tests/t011.err
Semantic error on line 2: Invalid type ('circle') for ternary condition. Type must be integer or double.
