src/exam/tests/t011.gpl
circle wheel;
double scifi = wheel ? 3.14 : 2.95;
